--- a/apps/dashboard-mfe/src/index.html
+++ b/apps/dashboard-mfe/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body>
+  <body class="host">
     <dijkstra-web-root></dijkstra-web-root>
   </body>
 </html>
