--- a/apps/chess-mfe/src/index.html
+++ b/apps/chess-mfe/src/index.html
@@ -6,6 +6,8 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <script src="assets/sockjs.min.js"></script>
+    <script src="assets/stomp.min.js"></script>
   </head>
   <body>
     <dijkstra-web-root></dijkstra-web-root>
